nginx-k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: cicd-ns
  labels:
    app: nginx-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-deploy
  template:
    metadata:
      labels:
        app: nginx-deploy
    spec:
      containers:
      - name: nginx-deploy
        image: gnachev/hello-world:3
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - test -f /run/nginx.pid
          initialDelaySeconds: 5
          periodSeconds: 5        
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /index.html
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1        
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 512m
            memory: 256Mi
          requests:
            cpu: 256m
            memory: 128Mi
