nginx-k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: cicd-ns
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx-deploy
